# eBird2ABAP

./: .gitignore  README.md  download_kbm_fullprotocol_csv.m  eBird2Card.m  eBirdvsKBM.mlx  generate_geosjon.m  kenya_pentad.geojson  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_pypi.yml
data/species_list/: ebird_taxonomy_v2023.xlsx  matched_species.csv
eBird2ABAP/: __init__.py  ebird2card.py  matched_species.csv  pentad.py  utils.py
eBird2ABAP/tests/: README.md  run_all_tests.py  test_pentad_bounds.py  test_pentad_conversions.py  test_pentad_polygons.py
export/: example_api_abap.json  example_import_abap.json
functions/: latlng2pentad.py  latlon2pentad.m  loadjson.m  pentad2latlng.m  pentad2latlng.py  readEBD.m
notebook/: comparison.ipynb  download_kbm_fullprotocol_csv.m  eBird2Card.ipynb  eBird2Card_explore.ipynb  eBird_card_analysis.mlx  heatmap.ipynb  pentad_generation_test.ipynb  pentad_naming_convention.ipynb  pipeline.ipynb  species_match.ipynb
